# lab-2

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Camera.cpp  Camera.h  MainWindow.cpp  MainWindow.h  ShaderProgram.cpp  ShaderProgram.h  basicShader.frag  basicShader.vert
sujet/: devoir_2.md.html
